[project]
name = "gojira"
version = "1.0.0"
description = "A Telegram bot that retrieves data from the Anilist API, specifically for manga and anime content."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Hitalo M." }]
dependencies = [
  "aiogram[fast,i18n]>=3.1.0",
  "aiohttp[speedups]>=3.8.5",
  "aiosqlite>=0.19.0",
  "lxml>=4.9.3",
  "humanize>=4.8.0",
  "meval>=2.5",
  "backoff>=2.2.1",
  "cashews[redis,speedup]>=6.3.0",
  "sentry-sdk>=1.30.0",
  "pydantic>=2.3.0",
  "pydantic-settings>=2.0.3",
  "aiofile>=3.8.8",
  "structlog>=23.1.0",
  "orjson>=3.9.7",
  "picologging>=0.9.2",
  "better-exceptions>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "gojira/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/HitaloM/Gojira/"

[tool.ruff]
line-length = 99
src = ["gojira"]
target-version = "py311"
select = [
  "I",    # isort
  "E",    # pycodestyle
  "W",    # pycodestyle
  "UP",   # pyupgrade
  "F",    # pyflakes
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "C4",   # flake8-comprehensions
  "PTH",  # flake8-use-pathlib
  "PERF", # perflint
  "N",    # pep8-naming
  "RUF",  # ruff
]
ignore = ["RUF001", "RUF002", "RUF003"]
preview = true

[tool.ruff.isort]
known-first-party = ["gojira"]

[tool.rye]
managed = true
