[project]
name = "gojira"
version = "1.0.0"
description = "A Telegram bot that retrieves data from the Anilist API, specifically for manga and anime content."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Hitalo M." }]
dependencies = [
  "aiogram[fast,i18n]>=3.13.1",
  "aiohttp[speedups]>=3.10.5",
  "aiosqlite>=0.20.0",
  "lxml>=5.3.0",
  "humanize>=4.10.0",
  "meval>=2.5",
  "backoff>=2.2.1",
  "cashews[redis,speedup]>=7.3.1",
  "sentry-sdk>=2.14.0",
  "pydantic-settings>=2.5.2",
  "aiofile>=3.8.8",
  "structlog>=24.4.0",
  "orjson>=3.10.7",
  "picologging>=0.9.3",
  "better-exceptions>=0.3.3",
  "babel>=2.13.1",
  "uvloop>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=3.8.0", "ruff>=0.6.6"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/HitaloM/Gojira/"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "RUF001",
  "RUF002",
  "RUF003",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0917",
  "PLR2004",
  "PLW2901",
  "PLW1641",
  "C901",
]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "CPY",   # flake8-copyright
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle
  "EM",    # flake8-errmsg
  "F",     # pyflakes
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "N",     # pep8-naming
  "PERF",  # perflint
  "PL",    # pylint
  "PTH",   # flake8-use-pathlib
  "RET",   # flake8-return
  "RUF",   # ruff
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "TID",   # flake8-tidy-imports
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-copyright]
author = "Hitalo M"
notice-rgx = "(?i)Copyright \\(C\\) \\d{4}"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.rye.scripts]
extract-locales = { cmd = "pybabel extract --keywords='__ _' --input-dirs=. -o locales/bot.pot" }
compile-locales = { cmd = "pybabel compile -d locales -D bot" }
clean-locales = { cmd = "find . -name '*.mo' -type f -delete" }
